[project]
name = "sakuragasaki46_suou"
authors = [
    { name = "Sakuragasaki46" }
]
dynamic = [ "version" ]
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"

dependencies = [
    "itsdangerous",
    "toml",
    "pydantic"
]
# - further devdependencies below - #

# - publishing -
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    
    # actively supported Pythons
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Repository = "https://github.com/sakuragasaki46/suou"

[project.optional-dependencies]
# the below are all dev dependencies (and probably already installed)
sqlalchemy = [
    "SQLAlchemy>=2.0.0"
]
flask = [
    "Flask>=2.0.0",
    "Flask-RestX"
]
flask_sqlalchemy = [
    "Flask-SqlAlchemy",
]
peewee = [
    "peewee>=3.0.0, <4.0"
]
markdown = [
    "markdown>=3.0.0"
]
quart = [
    "Flask>=2.0.0",
    "Quart",
    "Quart-Schema",
    "uvloop; os_name=='posix'"
]

full = [
    "sakuragasaki46-suou[sqlalchemy]",
    "sakuragasaki46-suou[flask]",
    "sakuragasaki46-suou[quart]",
    "sakuragasaki46-suou[peewee]",
    "sakuragasaki46-suou[markdown]"
]


[tool.setuptools.dynamic]
version = { attr = "suou.__version__" }
