[project]
name = "suou"
description = "casual utility library for coding QoL"
authors = [
    { name = "Sakuragasaki46" }
]
dynamic = [ "version" ]
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"

dependencies = [
    "itsdangerous",
    "toml",
    "pydantic",
    "setuptools>=78.0.0",
    "uvloop; os_name=='posix'"
]
# - further devdependencies below - #

# - publishing -
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    
    # actively supported Pythons
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Repository = "https://nekode.yusur.moe/yusur/suou"
Documentation = "https://suou.readthedocs.io"

[project.optional-dependencies]
# the below are all dev dependencies (and probably already installed)
sqlalchemy = [
    "SQLAlchemy[asyncio]>=2.0.0",
    "flask-sqlalchemy"  # glue code
]
flask = [
    "Flask>=2.0.0",
    "Flask-RestX"
]
flask_sqlalchemy = [
    "suou[sqlalchemy]",
    "suou[flask]"
]
peewee = [
    ## HEADS UP! peewee has setup.py, may slow down installation
    "peewee>=3.0.0"
]
markdown = [
    "markdown>=3.0.0"
]
quart = [
    "Quart",
    "Quart-Schema",
    "starlette>=0.47.2"
]
quart_auth = [
    "Quart-Auth",
    "suou[sqlalchemy]"  # glue code
]
sass = [
    ## HEADS UP!! libsass carries a C extension + uses setup.py
    "libsass"
]

full = [
    "suou[sqlalchemy]",
    "suou[flask]",
    "suou[quart]",
    "suou[quart_auth]",
    "suou[peewee]",
    "suou[markdown]",
    "suou[sass]"
]

docs = [
    "sphinx>=2.1",
    "myst_parser",
    "sphinx_rtd_theme"
]


[tool.setuptools.dynamic]
version = { attr = "suou.__version__" }
